--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/cannon": "6.6.0",
     "@react-three/drei": "9.102.6",
     "@react-three/fiber": "8.15.19",
+    "nanoid": "5.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "0.162.0"
+    "three": "0.162.0",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/react": "18.2.64",
